--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+base-files (7.5ev3dev1) testing; urgency=medium
+
+  * Merge upstream changes 
+  * Get rid of ev3dev-next branding
+  * Color ls and ls aliases enabled by default
+
+ -- David Lechner <david@lechnology.com>  Thu, 21 Aug 2014 23:30:06 -0500
+
 base-files (7.5) unstable; urgency=medium
 
   * Made /etc/os-release symlink to be relative, as an absolute symlink
