--- a/debian/README
+++ b/debian/README
@@ -4,10 +4,10 @@ Frequently Asked Questions about base-files
 * Questions about /etc/issue and /etc/debian_version:
 
 Q. I upgraded my system to the testing distribution and now my /etc/issue
-says "jessie/sid". Should it not read "jessie" or "testing"?
+says "stretch/sid". Should it not read "stretch" or "testing"?
 
 Q. I upgraded my system to the unstable distribution and now my /etc/issue
-says "jessie/sid". Should it not read "sid" or "unstable"?
+says "stretch/sid". Should it not read "sid" or "unstable"?
 
 A. That would be nice, but it is not possible because of the way the
 testing distribution works. Packages uploaded for unstable reach
@@ -17,9 +17,9 @@ testing. You should consider the testing and unstable distributions as
 two sides of the same coin. Since the base-files package in testing
 was initially uploaded for unstable, the only sensible /etc/issue to
 have is one that is both valid for testing and unstable, hence
-"jessie/sid" (or whatever is appropriate).
+"stretch/sid" (or whatever is appropriate).
 
-Q. Why "jessie/sid" and not "testing/unstable" as it used to be?
+Q. Why "stretch/sid" and not "testing/unstable" as it used to be?
 
 A. The codename is a little bit more informative, as the meaning of
 "testing" changes over time.
@@ -30,6 +30,14 @@ A. If you are running testing or unstable, then /etc/debian_version is
 not a reliable way to know that anymore. Looking at the contents of
 your /etc/apt/sources.list file is probably a much better way.
 
+Q. There is a new point release and I've just upgraded my system.
+The /etc/debian_version file now says 8.x but /etc/issue still says 8.
+Is this ok?
+
+A. Yes. The release managers asked me not to touch /etc/issue, as that's
+a file which is often customized by the user. The /etc/debian_version file,
+on the other side, is updated at every point release, so that the exact
+Debian version is shown when used by tools like reportbug.
 
 * Other questions:
 
