--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,8 @@
-base-files (9.6) unstable; urgency=low
+base-files (9.5ev3dev1) testing; urgency=low
 
-  * Add lintian override for /etc/os-release.
-  * Add lintian overrides for /usr/share/common-licenses.
-  * Standards-Version: 3.9.7 (no special changes for this).
-  * Switch to dh. Hopefully this should make the package easier
-    to fork. Closes: #693423.
-  * Change default /etc/profile to not warn about possibly undefined
-    variables PS1 and BASH. Closes: #776154.
+  * Merge ev3dev branding from ev3dev-jessie (changing jessie to stretch)
 
- -- Santiago Vila <sanvila@debian.org>  Fri, 04 Mar 2016 17:33:40 +0100
+ -- David Lechner <david@lechnology.com>  Wed, 23 Nov 2016 21:59:56 -0600
 
 base-files (9.5) unstable; urgency=medium
 
