--- a/debian/README
+++ b/debian/README
@@ -56,7 +56,6 @@ In either case, if you want to "upgrade" those files, just look at the
 postinst for base-files (i.e. /var/lib/dpkg/info/base-files.postinst)
 and you will see how they are created and where their master copies are:
 
-  install_from_default /usr/share/base-files/nsswitch.conf /etc/nsswitch.conf
   install_from_default /usr/share/base-files/dot.profile   /root/.profile
   install_from_default /usr/share/base-files/dot.bashrc    /root/.bashrc
   install_from_default /usr/share/base-files/profile       /etc/profile
@@ -68,7 +67,7 @@ installed squeeze system, you might want to sync these files manually.
 Note 1: Since base-files version 6.10, /etc/profile is automatically
 upgraded if it has not been modified from a previous default.
 
-Note 2: The file /etc/nsswitch.conf is going to be moved to libc-bin.
+Note 2: The file /etc/nsswitch.conf has been moved to libc-bin.
 
 
 Q. Why isn't license "foo" included in common-licenses?
